<resources>
    <string name="app_name">Medi App 2</string>
    <string name="top_image">Top Image</string>
    <string name="text_image">Text Image</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="logo_image">logo_image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up"><![CDATA[Don\'t Have An Account? SIGN UP]]></string>
    <string name="hello_welcome">Hello There!</string>
    <string name="sign_up_to_start_your_new_journey">Sign Up to start your new journey</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="welcome">Welcome!</string>
    <string name="start_your_journey">Start Your\nJourney</string>
    <string name="owner_s_username">Owner\'s Username</string>
    <string name="my_profile">My Profile</string>
    <string name="medical_records">Medical Records</string>
    <string name="book_appointments">Book Appointments</string>
    <string name="bills_and_payments">Bills and Payments</string>
    <string name="find_us">Find Us</string>
    <string name="janice_malu">Janice Malu</string>
    <string name="jannnnnn_malu">jannnnnn.malu</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="medi_app">Medi App</string>
    <string name="book_your_appointment">Book Your\nAppointment</string>
    <string name="specialities">Specialities</string>
    <string name="your_appointments">Your Booked\nAppointments</string>
    <string name="make_your_payments">Make Your\nPayments</string>
    <string name="select_your_payment_method">Select your payment method</string>
    <string name="credit_card">Credit Card</string>
    <string name="m_pesa">M-pesa</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="slider_title">Slider Title</string>
    <string name="slider_description">Slider Description</string>

    <string name="first_slide_title">Book Your Appointment</string>
    <string name="second_slide_title">Get Your Prescription</string>
    <string name="third_slide_title">The Best Doctors</string>

    <string name="first_slide_desc">Let us know more about you and your preferences</string>
    <string name="second_slide_desc">Let us know more about you and your preferences</string>
    <string name="third_slide_desc">Let us know more about you and your preferences</string>
    <string name="select_the_type_of_doctor">Select the type of doctor</string>
    <string name="type_of_doctor">Type of doctor</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="the_doctor">The Doctor</string>
    <string name="the_date">The Date</string>
    <string name="the_time">The Time</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_room">Enter Room</string>
    <string name="description">Description</string>

</resources>
