<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:elevation="10dp"
    android:padding="20dp"
    android:layout_margin="10dp"
    android:backgroundTint="@color/colorGrey"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_doctor"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="5dp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_below="@id/doc"
            android:text="@string/the_date"
            android:drawableStart="@drawable/ic_appointment"
            android:drawablePadding="5dp"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/doc_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/date"
            android:layout_below="@id/doc"
            android:text="@string/the_time"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_access_time_black_24dp"/>

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:text="Description"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_text_fields"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>