<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Appointments">

     <RelativeLayout
         android:id="@+id/appointment_layout"
         android:layout_width="match_parent"
         android:layout_height="190dp"
         android:backgroundTint="@color/colorMaroon"
         android:background="@drawable/layout_border">

         <TextView
             android:id="@+id/appointment_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/book_your_appointment"
             android:textColor="@color/colorWhite"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_centerVertical="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"/>

         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:src="@drawable/doctors1"
             android:layout_margin="10dp"
             android:layout_toEndOf="@id/appointment_title"/>

     </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Type of Doctor"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorMaroon"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/doc_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="Type of Doctor"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_border"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorMaroon"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/app_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="Appointment Date"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_border"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_time"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorMaroon"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/app_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="Appointment Time"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_border"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorMaroon"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/app_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:hint="Reason for appointment"
                android:background="@drawable/edit_border"/>

            <Button
                android:id="@+id/book_appointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Book"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:padding="10dp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>